# protocol-analysis-platform-web-ui

./: .gitignore  .tmux.conf  AGENTS.md  DEBUG_INSTRUCTIONS.md  Dockerfile  MQTT_INTEGRATION_README.md  README.md  SnmpFuzz.html  TODO.md  compiler_test.py  cspell.json  demo_mqtt_integration.py  fuzz_output.txt  index.html  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  snmpv2.html  test_mqtt_api.py  trdpv2.html  trdpv3.html  trdpv4.html  vitest.config.ts
apps/backend-flask/: DHCPv4.html  README.md  __init__.py  app.py  config.toml  logging_format.py  main.py  pyproject.toml  requirements.txt  snmpv1.html  synthesize_analysis_history.py  tls.html
apps/backend-flask/auth/: routes.py
apps/backend-flask/custom/: __init__.py  routes.py
apps/backend-flask/demo/: routes.py
apps/backend-flask/documentProcess/: __main__.py  html_process.py  index_filtering.py  specify_keywords.py  text_process.py
apps/backend-flask/firmware/: history.json  routes.py
apps/backend-flask/formalgpt/: routes.py
apps/backend-flask/keywordProcess/: comparative_keywords_updates.py  keywords.py  keywords_final.py  modal_keywords_update.py  specify_keywords_update.py
apps/backend-flask/menu/: routes.py
apps/backend-flask/misc/: routes.py
apps/backend-flask/protocol_compliance/: aflnet.py  aflnet_routes.py  analysis.py  assertion.py  assertion_database.py  assertion_history_repository.py  assertion_history_routes.py  assertion_history_util.py  assertion_routes.py  claude_agent_events.py  compiler.py  compiler_copy.py  docker_runner.py  fuzz_config_routes.py  (+28 more)
(+669 files in other folders)
