[project]
name = "backend-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "faker>=33.0.0",
    "docker>=7.0.0",
    "toml>=0.10.2",
    "flask-cors>=6.0.1",
    "ruff>=0.15.16",
    "ty>=0.0.44",
    "html2text>=2025.4.15",
    "lxml>=6.1.1",
    "openai>=2.41.0",
    "pandas>=2.3.3",
    "tenacity>=9.1.4",
    "tqdm>=4.68.1",
    "pytest>=9.0.3",
]
